--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".scenes.repositoryList.ui.RepositoryListActivity">
+        <activity android:name="br.com.mateus.githubrepositories.ui.RepositoryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
