--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,15 @@ android {
     defaultConfig {
         applicationId "br.com.mateus.githubrepositories"
 
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
 
         minSdkVersion minSDKVersionValue
         targetSdkVersion targetSDKVersionValue
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "APPCENTER_KEY", "\"1340cc27-bc8b-420a-ab8f-1f0b8f36973a\""
     }
 
     compileOptions {
@@ -65,6 +67,7 @@ dependencies {
 
     //AppCenter
     implementation app_center_deps.analytics
+    implementation app_center_deps.crashes
     implementation app_center_deps.distribute
 
     //Third party
