--- a/versions.gradle
+++ b/versions.gradle
@@ -66,7 +66,8 @@ ext {
 
     app_center_deps = [
             analytics : "com.microsoft.appcenter:appcenter-analytics:${versions.appcenter}",
-            distribute: "com.microsoft.appcenter:appcenter-distribute:${versions.appcenter}"
+            distribute: "com.microsoft.appcenter:appcenter-distribute:${versions.appcenter}",
+            crashes   : "com.microsoft.appcenter:appcenter-crashes:${versions.appcenter}"
     ]
 
     koin_deps = [
