--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -6,16 +6,19 @@ on:
       - master
 
 jobs:
-  build:
+  compile:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-      - name: Configuring JDK
-        uses: actions/setup-java@v1
+      - name: Set up Ruby 2.6
+        uses: actions/setup-ruby@v1
         with:
-          java-version: 1.8
+          ruby-version: 2.6.x
+
+      - name: Install Dependencies
+        run: gem install bundler && bundle install
 
       - name: Build and Deploy Project
         run: fastlane appcenter_build
