--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,21 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
+        classpath "com.github.dawnwords:jacoco-badge-gradle-plugin:0.2.0"
+    }
+}
+
+subprojects {
+    afterEvaluate { project ->
+        project.apply from: '../jacoco.gradle'
     }
 }
 
