--- a/versions.gradle
+++ b/versions.gradle
@@ -13,7 +13,6 @@ ext {
             kotlinx          : '1.3.2',
             core             : '1.1.0',
             constraint       : '1.1.3',
-            room             : '2.2.2',
             paging           : '2.1.2',
             play_services    : '17.0.0',
             material         : '1.0.0',
@@ -23,13 +22,15 @@ ext {
             retrofit         : '2.9.0',
             circle_image_view: '3.1.0',
             picasso          : '2.71828',
-            shimmer          : '0.5.0',
 
             junit            : '4.12',
             test_core        : '2.0.1',
             androidx_runner  : '1.2.0',
             expresso         : '3.2.0',
             espresso_core    : '3.2.0',
+            espresso_contrib : '3.3.0-rc03',
+            runner           : '1.2.0',
+            test_rules            : '1.2.0',
             test_extensions  : '1.1.1',
             koin_test        : '2.0.1',
             coroutines_test  : '1.3.2',
@@ -59,9 +60,6 @@ ext {
             app_compat          : "androidx.appcompat:appcompat:${versions.core}",
             constraint_layout   : "androidx.constraintlayout:constraintlayout:${versions.constraint}",
             paging              : "androidx.paging:paging-runtime:${versions.paging}",
-            room_runtime        : "androidx.room:room-runtime:${versions.room}",
-            room_compiler       : "androidx.room:room-compiler:${versions.room}",
-            room_ktx            : "androidx.room:room-ktx:${versions.room}",
     ]
 
     app_center_deps = [
@@ -84,11 +82,15 @@ ext {
     ]
 
     test_deps = [
-            junit          : "junit:junit:${versions.junit}",
-            mockk          : "io.mockk:mockk:${versions.mockk}",
-            test_core      : "androidx.arch.core:core-testing:${versions.test_core}",
-            koin_test      : "org.koin:koin-test:${versions.koin_test}",
-            coroutines_test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines_test}"
+            junit           : "junit:junit:${versions.junit}",
+            mockk           : "io.mockk:mockk:${versions.mockk}",
+            test_core       : "androidx.arch.core:core-testing:${versions.test_core}",
+            koin_test       : "org.koin:koin-test:${versions.koin_test}",
+            coroutines_test : "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines_test}",
+            test_runner     : "androidx.test:runner:${versions.runner}",
+            test_rules      : "androidx.test:rules:${versions.test_rules}",
+            espresso_core   : "androidx.test.espresso:espresso-core:${versions.espresso_core}",
+            espresso_contrib: "androidx.test.espresso:espresso-contrib:${versions.espresso_contrib}"
     ]
 
 
