--- a/versions.gradle
+++ b/versions.gradle
@@ -9,35 +9,35 @@ ext {
     targetSDKVersionValue = 30
 
     versions = [
-            kotlin           : '1.3.61',
-            kotlinx          : '1.3.2',
-            core             : '1.1.0',
-            constraint       : '1.1.3',
-            paging           : '2.1.2',
-            play_services    : '17.0.0',
-            material         : '1.0.0',
-            appcenter        : '2.3.0',
-            koin             : '2.0.1',
-            navigation       : '2.1.0',
-            retrofit         : '2.9.0',
-            circle_image_view: '3.1.0',
-            picasso          : '2.71828',
+            kotlin              : '1.3.61',
+            kotlinx             : '1.3.2',
+            core                : '1.1.0',
+            constraint          : '1.1.3',
+            paging              : '2.1.2',
+            lifecycle_extensions: '2.1.0',
+            play_services       : '17.0.0',
+            material            : '1.2.0',
+            appcenter           : '2.3.0',
+            koin                : '2.0.1',
+            navigation          : '2.1.0',
+            retrofit            : '2.9.0',
+            picasso             : '2.71828',
 
-            junit            : '4.12',
-            test_core        : '2.0.1',
-            androidx_runner  : '1.2.0',
-            expresso         : '3.2.0',
-            espresso_core    : '3.2.0',
-            espresso_contrib : '3.3.0-rc03',
-            runner           : '1.2.0',
-            test_rules            : '1.2.0',
-            test_extensions  : '1.1.1',
-            koin_test        : '2.0.1',
-            coroutines_test  : '1.3.2',
-            mockito_kotlin   : '2.2.0',
-            mockito          : '2.28.2',
-            mockk            : '1.9',
-            view_model_ktx   : '2.2.0'
+            junit               : '4.12',
+            test_core           : '2.0.1',
+            androidx_runner     : '1.2.0',
+            expresso            : '3.2.0',
+            espresso_core       : '3.2.0',
+            espresso_contrib    : '3.3.0-rc03',
+            runner              : '1.2.0',
+            test_rules          : '1.2.0',
+            test_extensions     : '1.1.1',
+            koin_test           : '2.0.1',
+            coroutines_test     : '1.3.2',
+            mockito_kotlin      : '2.2.0',
+            mockito             : '2.28.2',
+            mockk               : '1.9',
+            view_model_ktx      : '2.2.0'
     ]
 
     kotlin_deps = [
@@ -75,10 +75,9 @@ ext {
     ]
 
     third_deps = [
-            retrofit         : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
-            retrofit_gson    : "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
-            circle_image_view: "de.hdodenhof:circleimageview:${versions.circle_image_view}",
-            picasso          : "com.squareup.picasso:picasso:${versions.picasso}"
+            retrofit     : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
+            retrofit_gson: "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
+            picasso      : "com.squareup.picasso:picasso:${versions.picasso}"
     ]
 
     test_deps = [
